--- a/assets/assets_test/templates/index.html
+++ b/assets/assets_test/templates/index.html
@@ -1,8 +1,5 @@
 {% extends "layout.html" %}
 
-<link
-   href="{{ url_for('static', filename='dist/css/style.min.css') }}"
-   rel="stylesheet"
-   type="text/css"
-/>
-<script src="{{ url_for('static', filename='dist/js/main.min.js') }}"></script>
+{% block content %}
+    <H2>{{ body }}</H2>
+{% endblock %}
