--- a/assets/assets_test/templates/navigation.html
+++ b/assets/assets_test/templates/navigation.html
@@ -1,12 +1,9 @@
-<nav class="navigation-default">
+<nav class="navigation">
   <div class="nav-wrapper">
     <div class="left-nav">
       <a href="{{ url_for('main_bp.home') }}">Home</a>
       <a href="{{ url_for('main_bp.about') }}">About</a>
       <a href="{{ url_for('main_bp.etc') }}">Etc</a>
-    </div>
-    <div class="right-nav">
-      <a href="{{ url_for('admin_bp.dashboard') }}">My Account</a>
     </div>
   </div>
 </nav>
