--- a/assets/assets_test/templates/index.html
+++ b/assets/assets_test/templates/index.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <H2>{{ body }}</H2>
+    <p>{{ body }}</p>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/script.js') }}"/>
 {% endblock %}
