working templates in assets

--- a/assets/assets_test/templates/index.html
+++ b/assets/assets_test/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <p>{{ body }}</p>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/script.js') }}"/>
+    <p id="doc_body">{{ body }}</p>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/script.js') }}"></script>
 {% endblock %}
