--- a/assets/assets_test/templates/navigation.html
+++ b/assets/assets_test/templates/navigation.html
@@ -1,9 +1,9 @@
     <nav class="navigation">
         <div class="nav-wrapper">
             <div class="left-nav">
-                <a href="{{ url_for('main_bp.home') }}">Home</a>
-                <a href="{{ url_for('main_bp.about') }}">About</a>
-                <a href="{{ url_for('main_bp.etc') }}">Etc</a>
+                <a href="{{ url_for('home') }}">Home</a>
+                <a href="{{ url_for('about') }}">About</a>
+                <a href="{{ url_for('etc') }}">Etc</a>
             </div>
         </div>
     </nav>
