--- a/assets/assets_test/templates/index.html
+++ b/assets/assets_test/templates/index.html
@@ -2,5 +2,5 @@
 
 {% block content %}
     <p id="doc_body">{{ body }}</p>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='dist/js/script.min.js') }}"></script>
 {% endblock %}
