--- a/assets/assets_test/templates/meta.html
+++ b/assets/assets_test/templates/meta.html
@@ -1,5 +1,5 @@
 {% block meta %}
   <meta charset="utf-8" />
   <title>{{ title }}</title>
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}"/>
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='dist/css/style.min.css') }}"/>
 {% endblock %}
