--- a/sse/sse_test/templates/index.html
+++ b/sse/sse_test/templates/index.html
@@ -5,15 +5,6 @@
     </head>
     <body>
         <h1>Flask-SSE test</h1>
-        <script>
-            var source = new EventSource("{{ url_for('sse.stream') }}");
-            source.addEventListener('greeting', function(event) {
-                var data = JSON.parse(event.data);
-                alert("The server says " + data.message);
-            }, false);
-            source.addEventListener('error', function(event) {
-                alert("Failed to connect to event stream. Is Redis running?");
-            }, false);
-        </script>
+        <script type="text/javascript" src="{{ url_for('static', filename='dst/js/script.min.js') }}"></script>
     </body>
 </html>
